fix arrow alignment on search filter buttons

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -86,22 +86,29 @@ body {
 	.question {
 		margin-left: 5px;
 		margin-top: 2px;
-		display: inline-block;
 	}
+
 	.answer-label {
-		text-align: left;
+		float: left;
 		margin-left: 5px;
 	}
 
+	.hide-card {
+		float: right;
+		color: black;
+	}
+
 	.delete-card {
-		text-align: right;
+		width: 10px;
 		margin-right: 10px;
 		color: black;
 	}
 
 	.down {
+		vertical-align: middle;
 		width: 20px;
 	}
+
 	.answer-dropdown {
 		width: 100%;
 		background-color: #dbdbdb;
@@ -115,15 +122,22 @@ body {
 		margin-top: 2px;
 		display: inline-block;
 	}
+
+	.hide-answer {
+		color: black;
+	}
+
 	.delete-answer{
-		text-align: right;
+		width: 10px;
+		float: right;
 		margin-right: 10px;
 		color: black;
 	}
 }
 
 .time-filter, .sites-filter {
-	margin-top: 10px;
+	margin-top: 5px;
+	padding-top: 8px;
 	margin-right: 5px;
 	width: 130px;
 	height: 30px;
@@ -133,6 +147,7 @@ body {
 	position: relative;
 	.time-down, .sites-down {
 		width: 20px;
+		vertical-align: middle;
 	}
 }
 
@@ -140,7 +155,7 @@ body {
 	width: 100%;
 	list-style: none;
 	text-align: left;
-	margin-top: -10px;
+	margin-top: -6px;
 	display: none;
 	ul {
 		background-color: #dbdbdb;
